<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_swipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFeedFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" />

</android.support.v4.widget.SwipeRefreshLayout>
