<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/ganjify"
        android:alpha="0"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:alpha="1"
        tools:context=".login.fragment.LoginFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/login_title"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/login_login_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_login_username"
                android:inputType="text"
                android:background="@drawable/drawable_login_edittext"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/login_login_password"
                android:inputType="textPassword"
                android:background="@drawable/drawable_login_edittext"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/drawable_button"
                android:textColor="@color/login_text_button"
                android:text="@string/login_login_login"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>