...
            android:layout_marginTop="15dp"
            android:background="@drawable/drawable_button"
            android:textColor="@color/login_text_button"
            android:text="@string/detailuser_update"/>

        <Button
            android:id="@+id/updateuser_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/drawable_button"
            android:textColor="@color/login_text_button"
...
